# Kodowanie-Otwartych-Local

./: README.md  categories.json  config.yml  data_manager.py  data_types.py  data_util.py  gradient.py  main.py  makefile  model_manager.py  prompts.json  pyproject.toml
data/: .gitignore  2024-kat.json  categories.json  prompts.json
